# cityjson-corpus

./: .gitignore  LICENSE-DATA  README.md  justfile  mkdocs.yml  properdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
artifacts/: README.md  correctness-index.json
benchmarks/: manifest.json
cases/: README.md
cases/invalid/invalid_cityjsonfeature_root_id_unresolved/: README.md  case.json  invalid_cityjsonfeature_root_id_unresolved.city.jsonl  invariants.json
cases/invalid/invalid_missing_type/: case.json  invalid_missing_type.json  invariants.json
cases/operations/ops_3dbag_base/: case.json  (+2 more)
catalog/: README.md  cases.json  corpus.json
catalog/cases/: README.md  invalid_missing_type.md  io_3dbag_cityjson.md  io_3dbag_feature_files.md  io_3dbag_jsonl.md  ops_3dbag_base.md  ops_3dbag_enriched.md  ops_3dbag_semantic_surfaces.md  spec_appearance_matrix.md  spec_complete_omnibus.md  spec_extensions_feature_stream.md  spec_geometry_matrix.md  spec_templates_matrix.md  stress_appearance_and_validation.md  stress_attribute_tree.md  stress_composite_value.md  stress_deep_boundary.md  stress_geometry_flattening.md  stress_relation_graph.md  stress_vertex_transform.md
docs/: contributing.md  data-generation.md  implementation-plan.md  independent-use.md  index.md  latest-results.md  licensing.md  native-bindings.md  rust-wasm.md  shared-corpus-migration-plan.md  shared-corpus.md
docs/adr/: 0009-cityjson-benchmark-corpus-design.md  0010-correctness-corpus-coverage-and-generated-cases.md  0010-correctness-corpus-trust-tiers-and-generated-supplemental-cases.md
drivers/cpp/: CMakeLists.txt  main.cpp
drivers/python/: benchmark.py
drivers/rust/: Cargo.toml
drivers/wasm/: Cargo.toml  run_wasm_benchmark.cjs
drivers/wasm/src/: lib.rs  main.rs
invalid/: README.md
invariants/: README.md  corpus.json
pipelines/: README.md  audit_corpus.sh
profiles/: README.md  appearance_and_validation_stress.json  attribute_tree_worst_case.json  cjfake-manifest.schema.json  composite_value_favorable_worst_case.json  deep_boundary_stress.json  geometry_flattening_best_case.json  relation_graph_worst_case.json  vertex_transform_stress.json
profiles/cases/: README.md  spec_appearance_matrix.json  spec_complete_omnibus.json  spec_extensions_feature_stream.json  spec_geometry_matrix.json  spec_templates_matrix.json  stress_appearance_and_validation.json  stress_attribute_tree.json  stress_composite_value.json  stress_deep_boundary.json  stress_geometry_flattening.json  stress_relation_graph.json  stress_vertex_transform.json
schemas/: README.md  acquisition.schema.json  case.schema.json  cityjson-fake-manifest.schema.json  invariants.schema.json
schemas/cityjson/: cityjson.min.schema.json  cityjsonfeature.min.schema.json  noise.ext.json
scripts/: acquire_3dbag.sh  acquire_basisvoorziening_3d.py  acquire_basisvoorziening_3d.sh  bootstrap_case_layout.py  build_audit_summary.py  build_native.sh  build_rust_wasm.sh  corpus_cases.py  expand_conformance_snippets.py  generate_data.sh  generate_docs.py  render_case_catalog.py  render_correctness_index.py  validate_case_layout.py  validate_profiles.sh
src/cjlib_benchmarks/: __init__.py  cli.py  model.py  runner.py
tools/cjfake-profile-gen/: Cargo.toml
(+257 files in other folders)
