[package]
name = "cjlib-benchmark-wasm-driver"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cjlib-wasm = { path = "/home/balazs/Development/cjlib/ffi/wasm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.115"
